# lobo_ovelha_cacador

./: Ovelha_Lobo_Caçador.c  RELATORIO.md  sprite jogo av3.rar
turma_qui/: Grupos.txt
turma_qui/grupo_1/: CMakeLists.txt  README.md  integrantes.md  integrantes.txt  main.c  makefile  planejamento.md
turma_qui/grupo_1/assets/: hunter.ase
turma_qui/grupo_1/include/graph/: renderer.h  window.h
turma_qui/grupo_1/src/: main.c
turma_qui/grupo_1/src/engine/: engine.c  main.c
turma_qui/grupo_1/src/game/: main.c
turma_qui/grupo_1/src/graph/: renderer.c  window.c
turma_qui/grupo_13/: AV3.c  integrantes.txt
turma_qui/grupo_2/: Makefile  README.md  build.bat  integrantes.txt  jogo.c  jogo.html
turma_qui/grupo_2/docs/: checklist_requisitos_c  relatorio
turma_qui/grupo_2/include/: board.h  entities.h  simulation.h  types  utils.h
turma_qui/grupo_2/src/: board.c  entities.c  main  simulation.c  utils.c
turma_qui/grupo_3/: CMakeLists.txt  README.md
turma_qui/grupo_3/assets/: rock.ase  sheep.ase  tree.ase  wolf.ase
turma_qui/grupo_3/include/engine/: engine.h  noise.h
turma_qui/grupo_3/include/graph/: renderer.h
turma_qui/grupo_3/src/: main.c
turma_qui/grupo_3/src/engine/: engine.c  noise.c
turma_qui/grupo_3/src/graph/: renderer.c  window.c
turma_qui/grupo_6/: Makefile  integrantes.txt
turma_qui/grupo_6/src/: main.c
turma_qui/grupo_6/src/background/: background.c  background.h
turma_qui/grupo_6/src/entities/: entities.c  entities.h
turma_qui/grupo_6/src/include/: core.h
turma_qui/grupo_7/: integrantes.txt
turma_qui/grupo_7/ecossistema/: main.c
turma_qui/grupo_8/: floresta_selvagem.c  integrantes.txt
turma_qui/grupo_9/: Jogo c grupo 9  integrantes.txt
turma_ter/grupo_1/: Integrantes.txt  codigo.c  instrucoes.txt  integrantes.txt  main.c  observacao_execucao_onlinegdb.txt
turma_ter/grupo_1/includes/: estruturas.h  simulacao.h
turma_ter/grupo_1/src/: simulacao.c  tabuleiro.c
turma_ter/grupo_10/: ecosystem  integrantes.txt
turma_ter/grupo_11/: integrantes.txt
turma_ter/grupo_3/: integrantes.txt  nivel1.txt
turma_ter/grupo_3/COM EMOJI - Policia e Ladrao/: jogo.c
turma_ter/grupo_3/SEM EMOJI - Policia e Ladrao/: jogo.c  jogo.h  main.c
turma_ter/grupo_6/: integrantes.txt
turma_ter/grupo_7/: integrantes.txt
turma_ter/grupo_7/trabalho_estr_dados/: ecosistema
turma_ter/grupo_7/trabalho_estr_dados/include/: entity.h  movement.h  (+2 more)
turma_ter/trabalho_estr_dados/: Makefile  README.md
turma_ter/trabalho_estr_dados/include/: board.h  display.h  interaction.h
turma_ter/trabalho_estr_dados/src/: board.c  display.c  entity.c  main.c  movement.c  simulation.c
(+1 files in other folders)
